--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ requests==2.26.0
 scikit_image==0.18.3
 scikit_learn==1.0.2
 scipy==1.7.1
-skimage==0.0
+scikit-image
 submitit==1.4.1
 torch==1.9.1+cu111
 torchattacks==3.2.3
